deploy/svc-django.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-web01
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: django-web01
  ports:
  - name: http
    port: 80
    targetPort: 8000
